Atualizar Introdução e Contextualização
Atualizar a introdução e contextualização do problema a resolver

--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -101,40 +101,30 @@
 \newpage
 \section{Introdução}
 
-No mundo atual, a economia colaborativa tem ganhado cada vez mais destaque, incentivando práticas como a troca, venda e empréstimo de produtos entre indivíduos de uma mesma comunidade. Com base nessa tendência, este projeto propõe o desenvolvimento de uma plataforma que facilite essas transações de forma organizada e segura. 
-Através da marcação de encontros dentro da comunidade, os utilizadores poderão partilhar recursos, reduzindo desperdícios e promovendo um consumo mais sustentável.
-Este relatório apresenta os principais elementos do projeto, incluindo diagramas UML e mockups, que ilustram a estrutura e funcionalidades da plataforma.
+A Vizzy é uma plataforma comunitária desenvolvida para facilitar a compra, venda, troca e aluguer de itens entre pessoas da mesma comunidade, promovendo uma forma prática, económica e sustentável de partilhar recursos.
 
+Através da Vizzy, os utilizadores podem adquirir produtos em segunda mão, trocar itens ou até alugar ferramentas e outras coisas. Isto não só reduz o desperdício, mas também oferece uma alternativa mais acessível, especialmente quando se trata de alugueres. Alugar uma ferramenta a um vizinho, por exemplo, pode ser muito mais económico do que comprá-la a uma grande empresa.
+
+O objetivo da plataforma é criar uma rede de partilha dentro da comunidade, onde os membros possam beneficiar de um consumo mais consciente, poupando dinheiro e recursos, ao mesmo tempo que promovem a sustentabilidade e a cooperação.
+
+Neste relatório, serão apresentados os principais detalhes da aplicação, incluindo diagramas UML e mockups, que ilustram as funcionalidades essenciais da Vizzy.
+
+\newpage
 \section{Problema e Motivação}
 
 \subsection{O Problema}
 
+Nos dias de hoje, muitas comunidades enfrentam desafios económicos e ambientais relacionados ao consumo excessivo e à falta de acesso a certos produtos. Itens valiosos acabam por ser desperdiçados ou ficam esquecidos, enquanto outras pessoas na mesma comunidade poderiam beneficiar deles. Ao mesmo tempo, a aquisição de novos produtos nem sempre é uma opção viável devido ao custo ou à disponibilidade limitada.
+
+Outro desafio importante é a falta de soluções práticas para facilitar a troca, venda e aluguer de itens de forma organizada, o que leva a um ciclo de consumo ineficiente e desperdício de recursos.
+
 \subsection{A Solução Proposta}
 
-Em muitas comunidades, o consumo desenfreado e a dificuldade de acesso a determinados produtos criam desafios tanto econômicos quanto ambientais. 
+A Vizzy surge como uma resposta a estes problemas, oferecendo uma plataforma onde os membros da comunidade podem comprar, vender, trocar e alugar itens de forma simples e segura. Com esta solução, é possível dar uma segunda vida a produtos que seriam descartados e permitir que as pessoas acedam a bens de que necessitam, sem precisarem de comprá-los novos.
 
-Muitas vezes, itens de valor são descartados ou ficam inutilizados por falta de uso, enquanto outras pessoas poderiam se beneficiar deles. Paralelamente, a aquisição de novos produtos pode ser um obstáculo devido a limitações financeiras ou dificuldade de disponibilidade.
+Além disso, ao permitir o aluguer de ferramentas e outros objectos, a Vizzy oferece uma alternativa económica e prática, como no caso de alugar uma ferramenta a um vizinho em vez de recorrer a grandes empresas. Isto não só reduz os custos para os utilizadores, mas também contribui para um modelo de consumo mais sustentável.
 
-Nesse contexto, um sistema de troca, venda e empréstimo de produtos dentro de uma comunidade pode se tornar uma solução eficiente para otimizar o uso dos recursos, reduzir desperdícios e fortalecer os laços entre os membros da comunidade. 
-
-Esse modelo permite que os indivíduos tenham acesso a itens de que necessitam sem necessariamente precisar comprá-los novos, ao mesmo tempo em que promovem a circularidade dos bens.
-
-\subsection{Descrição do Problema e Motivação para a Solução}
-
-O problema central reside na falta de um sistema organizado e acessível para facilitar a troca, venda e empréstimo de produtos dentro de uma comunidade. 
-
-Atualmente, muitas pessoas não sabem onde ou como oferecer seus itens para troca ou venda, resultando em desperdício e em um ciclo de consumo ineficiente. 
-
-Além disso, a aquisição de produtos novos pode ser um desafio financeiro para algumas famílias, tornando a economia colaborativa uma alternativa atraente.
-
-A solução proposta é a criação de um sistema onde os membros de uma comunidade possam marcar encontros para trocar, vender ou emprestar produtos de forma organizada e segura. 
-
-Além disso, o sistema permitiria que um membro da comunidade fizesse uma marcação antecipada de quando necessitará de determinado produto, garantindo que itens parados sejam utilizados mais vezes e de forma mais eficiente. 
-
-Esse sistema permitiria uma gestão eficiente dos recursos, promovendo a reutilização de itens e reduzindo a necessidade de compras desnecessárias. Além do impacto econômico positivo, a iniciativa também traria benefícios ambientais ao reduzir o descarte de produtos ainda em boas condições.
-
-Dessa forma, ao estabelecer uma plataforma de fácil acesso para troca, venda e empréstimo, seria possível fomentar a cooperação entre os membros da comunidade, fortalecer o senso de pertencimento e promover um consumo mais consciente e sustentável.
-
+A plataforma visa, assim, otimizar o uso dos recursos, reduzir desperdícios e fortalecer os laços entre os membros da comunidade. Com a Vizzy, todos podem beneficiar de uma forma mais acessível e consciente de consumir, promovendo a circularidade e a sustentabilidade.
 
 %------------------------------------------------------------------------------------
 
