sequence-diagrams-vpp-files

--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -26,6 +26,8 @@
 \usepackage{graphicx} % Required for including pictures
 \usepackage{wrapfig} % Allows in-line images
 
+\usepackage{hyperref}%Required for hyperlink references
+
 \usepackage{mathpazo} % Use the Palatino font
 \usepackage[T1]{fontenc} % Required for accented characters
 \linespread{1.05} % Change line spacing here, Palatino benefits from a slight increase by default
@@ -317,7 +319,12 @@ Esta arquitetura assegura um sistema robusto, seguro e otimizado, permitindo uma
 \newpage
 \section*{\textit{Product Backlog}}
 
-A plataforma pr
+O \textit{Product Backlog} do projeto está definido e vai sendo atualizado através dos seguintes \textit{links}:
+\begin{itemize} 
+	\item\href{https://ipcapt-my.sharepoint.com/:x:/g/personal/nfr\_ipca\_pt/Eb29k3z-aWRGisXGIZopL6IBy5l5QZjY8SjG1iWQDl6c7w?rtime=jE\_b04Za3Ug}{\textbf{\textit{Excel}}}
+	\item\href{https://basigraphics.atlassian.net/jira/software/projects/VIZZY/boards/1/backlog?epics=visible&atlOrigin=eyJpIjoiOGNmZTQ2MDRmNjQ1NDY0NDgwNDk0MDJiMGM0MDdlZWYiLCJwIjoiaiJ9}{\textbf{\textit{Jira}}}
+	
+\end{itemize}
 
 %------------------------------------------------
 \newpage
