--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -522,79 +522,121 @@ O processo pode resultar em dois desfechos:
 
 O diagrama representa um software de produtos onde os utilizadores podem comprar, vender, alugar ou trocar. A estrutura do modelo de dados é composta por várias tabelas interligadas, refletindo diferentes tipos de listagens, propostas e transações.
 
-\textbf{Principais Tabelas e Ligações}
 
-\textbf{1. Utilizadores (User)}
+
+
+\subsection{\textbf{Principais Tabelas e Relações}}
+
+\subsubsection{\textbf{Utilizadores (users)}}
 
 \begin{itemize}
-    \item Esta tabela armazena informações dos utilizadores, incluindo nome, email, data de criação e último acesso.
-    \item Está ligada a várias tabelas, incluindo:
+    \item Contém informações dos utilizadores, como nome, email e localização.
+    \item Campos importantes:
     \begin{itemize}
-        \item \textbf{Location} (localização do utilizador)
-        \item \textbf{UserType} (tipo de utilizador)
-        \item \textbf{BlockedUser} (bloqueios entre utilizadores)
-        \item \textbf{Favorite} (itens favoritos do utilizador)
-        \item \textbf{Proposal} (propostas enviadas e recebidas)
-        \item \textbf{UserTransaction} (transações associadas ao utilizador)
+        \item \verb|id| (UUID): Identificador único do utilizador.
+        \item \verb|username|, \verb|email|, \verb|name|: Dados pessoais.
+        \item \verb|location_id|: Referência à localização do utilizador.
+        \item \verb|is_deleted|, \verb|deleted_at|: Indicam se a conta foi apagada.
+    \end{itemize}
+    \item Ligações:
+    \begin{itemize}
+        \item \textbf{locations} (cidade e país do utilizador).
+        \item \textbf{blocked\_users} (gestão de bloqueios entre utilizadores).
+        \item \textbf{favorites} (listagens favoritas do utilizador).
+        \item \textbf{contacts} (dados de contacto do utilizador).
+        \item \textbf{user\_transactions} (associação com transações).
     \end{itemize}
 \end{itemize}
-\textbf{2. Listagens (Listing)}
+
+\subsubsection{\textbf{Listagens de Produtos (product\_listings)}}
 
 \begin{itemize}
-    \item Representa os itens que os utilizadores podem colocar na plataforma para venda, aluguer, troca ou venda.
-    \item Campos principais incluem título, descrição, data de criação, estado do anúncio e categoria.
-    \item Está ligada às seguintes tabelas:
+    \item Representa os produtos anunciados pelos utilizadores.
+    \item Campos importantes:
     \begin{itemize}
-        \item \textbf{ListingStatus} (estado da listagem)
-        \item \textbf{Category} (categoria da listagem)
-        \item \textbf{User} (dono da listagem)
-        \item \textbf{Favorite} (itens marcados como favoritos pelos utilizadores)
-        \item Tipos específicos de listagens: \textbf{SaleListing}, \textbf{RentalListing}, \textbf{SwapListing} e \textbf{GiveawayListing}.
+        \item \verb|id|: Identificador único da listagem.
+        \item \verb|title|, \verb|description|: Informações do item.
+        \item \verb|date_created|: Data de criação do anúncio.
+        \item \verb|owner_id|: Utilizador que criou a listagem.
+        \item \verb|category_id|: Categoria do produto.
+        \item \verb|listing_status|: Estado da listagem.
+    \end{itemize}
+    \item Ligações:
+    \begin{itemize}
+        \item \textbf{listing\_statuses} (estado da listagem: ativo, expirado, etc.).
+        \item \textbf{product\_categories} (categoria do produto).
+        \item \textbf{product\_images} (imagens associadas ao produto).
+        \item Diferentes tipos de listagens: \textbf{sale\_listings}, \textbf{rental\_listings}, \textbf{swap\_listings} e \textbf{giveaway\_listings}.
     \end{itemize}
 \end{itemize}
-\textbf{3. Tipos de Listagens}
+
+\subsubsection{\textbf{Tipos de Listagens}}
 
 \begin{itemize}
-    \item \textbf{SaleListing}: Inclui preço, condição do item e se é negociável.
-    \item \textbf{RentalListing}: Contém informações sobre custo diário, data de indisponibilidade e taxa de atraso.
-    \item \textbf{SwapListing}: Define a categoria e o item desejado para troca.
-    \item \textbf{GiveawayListing}: Especifica requisitos para quem pode receber o item gratuitamente.
+    \item \textbf{sale\_listings}: Inclui preço, condição do produto e se o preço é negociável.
+    \item \textbf{rental\_listings}: Contém dados como custo diário, depósito e limite de duração do aluguer.
+    \item \textbf{swap\_listings}: Define o item desejado para troca.
+    \item \textbf{giveaway\_listings}: Especifica requisitos para doação do item.
 \end{itemize}
-\textbf{4. Propostas (Proposal)}
+
+\subsubsection{\textbf{Propostas (proposals)}}
 
 \begin{itemize}
-    \item Esta tabela armazena propostas de transação entre utilizadores, incluindo envio e receção.
-    \item Está ligada a:
+    \item Regista propostas de transação entre utilizadores.
+    \item Campos principais:
     \begin{itemize}
-        \item \textbf{ProposalType} (tipo de proposta)
-        \item \textbf{User} (remetente e destinatário)
-        \item \textbf{Listing} (listagem associada)
-        \item Tipos específicos de propostas: \textbf{SaleProposal}, \textbf{RentalProposal}, \textbf{SwapProposal} e \textbf{GiveawayProposal}.
+        \item \verb|id|: Identificador único.
+        \item \verb|sender_id|, \verb|receiver_id|: Utilizadores envolvidos.
+        \item \verb|listing_id|: Produto associado à proposta.
+        \item \verb|proposal_type_id|: Tipo de proposta (troca, venda, aluguer, doação).
+        \item \verb|proposal_status_id|: Estado da proposta.
+    \end{itemize}
+    \item Ligações:
+    \begin{itemize}
+        \item \textbf{proposal\_types} (tipo de proposta).
+        \item \textbf{proposal\_statuses} (estado da proposta).
+        \item Tipos específicos de propostas:
+        \begin{itemize}
+            \item \textbf{sale\_proposals} (inclui preço oferecido).
+            \item \textbf{rental\_proposals} (informações de aluguer).
+            \item \textbf{swap\_proposals} (itens de troca).
+            \item \textbf{giveaway\_proposals} (mensagem para doação).
+        \end{itemize}
     \end{itemize}
 \end{itemize}
-\textbf{5. Transações (Transaction)}
+
+\subsubsection{\textbf{Transações (transactions)}}
 
 \begin{itemize}
-    \item Regista as transações concretizadas na plataforma.
-    \item Campos principais incluem data da transação, estado, utilizador envolvido e proposta associada.
-    \item Está ligada a:
+    \item Armazena transações concluídas na plataforma.
+    \item Campos principais:
     \begin{itemize}
-        \item \textbf{TransactionStatus} (estado da transação)
-        \item \textbf{Listing} (item envolvido)
-        \item \textbf{Proposal} (proposta que originou a transação)
-        \item \textbf{UserTransaction} (relação entre comprador e vendedor).
+        \item \verb|id|: Identificador único.
+        \item \verb|date_created|: Data da transação.
+        \item \verb|transaction_status_id|: Estado da transação.
+        \item \verb|listing_id|: Produto transacionado.
+        \item \verb|proposal_id|: Proposta que originou a transação.
+        \item \verb|user_id|: Utilizador envolvido.
+    \end{itemize}
+    \item Ligações:
+    \begin{itemize}
+        \item \textbf{transaction\_statuses} (estado da transação).
+        \item \textbf{user\_transactions} (relação entre comprador e vendedor).
     \end{itemize}
 \end{itemize}
-\textbf{6. Outras tabelas de suporte}
+
+\subsubsection{\textbf{Outras tabelas de suporte}}
 
 \begin{itemize}
-    \item \textbf{Location} e \textbf{Contact}: Guardam detalhes sobre localização e contactos de empresas.
-    \item \textbf{Category}: Define categorias para as listagens.
-    \item \textbf{BlockedUser}: Armazena relações de bloqueio entre utilizadores.
-    \item \textbf{UserType}: Define diferentes tipos de utilizadores (por exemplo, comprador, vendedor, administrador).
+    \item \textbf{locations}: Armazena informações sobre a localização do utilizador.
+    \item \textbf{contacts}: Regista detalhes de contacto.
+    \item \textbf{favorites}: Guarda listagens marcadas como favoritas pelos utilizadores.
+    \item \textbf{blocked\_users}: Relação entre utilizadores bloqueados.
+    \item \textbf{product\_categories}: Define as categorias dos produtos.
+    \item \textbf{product\_images}: Associa imagens às listagens.
+    \item \textbf{rental\_availabilities}: Especifica a disponibilidade de aluguer.
 \end{itemize}
-
-Este diagrama ER modela um sistema robusto para compra, venda, aluguer e troca de itens. As tabelas principais são \textbf{User}, \textbf{Listing}, \textbf{Proposal} e \textbf{Transaction}, com relações bem definidas para manter a integridade dos dados.
+ 
 
 
 \begin{figure}[ht]
